# sciso

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
nextflow/: main.nf  nextflow.config
src/iris/: benchmark_dtu.py  pipeline.py
src/sciso/: __init__.py  _cli.py  _logging.py  _stats.py  allele_specific_expression.py  benchmark_dtu.py  cell_type_annotation.py  cluster_analysis.py  differential_transcript_usage.py  dual_layer_clustering.py  export_anndata.py  isoform_trajectory.py  multi_sample.py  novel_isoform_discovery.py  pipeline.py  plot.py  report.py  validate.py
tests/: test_allele_specific_expression.py  test_cell_type_annotation.py  test_cluster_analysis.py  test_differential_transcript_usage.py  test_dual_layer_clustering.py  test_edge_cases.py  test_export_anndata.py  test_isoform_trajectory.py  test_multi_sample.py  test_novel_isoform_discovery.py  test_pipeline.py  test_plot.py  test_validate.py
validation/: gene_transcript_map.tsv  generate_synthetic_truthset.py  ground_truth_groups.tsv  synthetic_annotations.gtf  synthetic_variants.vcf
